@@ -1,5 +1,13 @@
 2017-01-10 Even Rouault <even dot rouault at spatialys dot com>
 
+	* csv/build_pcs.py, csv/datum_shift_pref.csv: add mechanism to define
+	TOWGS84 parameters per PCS (instead of only relying on the TOWGS84
+	parameters of the underlying GCS).
+	Add override for EPSG:3844 ("Pulkovo 1942(58) / Stereo70" Romania)
+	Fixes https://trac.osgeo.org/geotiff/ticket/52
+
+2017-01-10 Even Rouault <even dot rouault at spatialys dot com>
+
 	* csv/datum_shift_pref.csv: add override for CH1903 (EPSG:4149)
 	Fixes https://trac.osgeo.org/geotiff/ticket/73
 
